--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -52,4 +53,60 @@ body header nav ul li a {
 body header nav ul li a:hover {
   color: rgba(152, 57, 255, 0.5);
   border-bottom: 3px solid rgba(152, 57, 255, 0.5);
+}
+body main section.background-img {
+  min-height: 70vh;
+  background-image: url("../images/日本櫻花.jpg");
+  background-size: cover;
+  background-position: center;
+  transition: all 0.75s ease;
+  position: relative;
+  z-index: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body main section.background-img div.filter {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  min-height: 70vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+body main section.background-img h3 {
+  color: white;
+  font-size: 2.5rem;
+  text-align: center;
+}
+body main section.info-circles {
+  background-color: white;
+  padding: 2rem 1rem;
+}
+body main section.info-circles h3 {
+  text-align: center;
+  font-size: 2rem;
+}
+body main section.info-circles div.circles {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+body main section.info-circles div.circles div.circle {
+  padding: 1rem;
+  flex: 0 1 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+body main section.info-circles div.circles div.circle img {
+  width: 80%;
+  border-radius: 50%;
+  transition: all 0.1s ease-in;
+  padding: 0.3rem;
+  margin-bottom: 0.8rem;
+}
+body main section.info-circles div.circles div.circle img:hover {
+  border: 3px solid rgba(152, 57, 255, 0.5);
 }/*# sourceMappingURL=style.css.map */
