--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,14 @@ h6 {
 body {
   position: relative;
 }
+body img.fixed-image {
+  min-height: 100vh;
+  position: fixed;
+  width: 100%;
+  z-index: -5;
+  bottom: 0;
+  left: 0;
+}
 body header {
   background-color: white;
   display: flex;
@@ -109,4 +117,31 @@ body main section.info-circles div.circles div.circle img {
 }
 body main section.info-circles div.circles div.circle img:hover {
   border: 3px solid rgba(152, 57, 255, 0.5);
+}
+body main section.empty-container {
+  min-height: 70vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body main section.empty-container h3 {
+  font-size: 2rem;
+  color: white;
+}
+body main section.google-map {
+  background-color: white;
+  padding: 2rem 1rem;
+  text-align: center;
+}
+body main section.google-map h3 {
+  font-size: 2.5rem;
+}
+body main section.google-map p {
+  font-size: 1.25rem;
+  margin: 1rem;
+}
+body main section.google-map iframe {
+  width: 100%;
+  height: 40vh;
 }/*# sourceMappingURL=style.css.map */
