--- a/styles/style.css
+++ b/styles/style.css
@@ -144,4 +144,25 @@ body main section.google-map p {
 body main section.google-map iframe {
   width: 100%;
   height: 40vh;
+}
+body footer {
+  display: flex;
+  padding: 2rem;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+body footer section.logo img {
+  width: 20vw;
+}
+body footer section.logo h3 {
+  font-size: 2.5rem;
+}
+body footer section.links {
+  margin-top: 2rem;
+}
+body footer section.links a img {
+  width: 5vh;
+  margin: 0rem 1rem;
 }/*# sourceMappingURL=style.css.map */
