--- a/styles/style.css
+++ b/styles/style.css
@@ -165,4 +165,20 @@ body footer section.links {
 body footer section.links a img {
   width: 5vh;
   margin: 0rem 1rem;
+}
+
+@media screen and (max-width: 700px) {
+  body header section.logo {
+    flex-direction: column;
+  }
+  body header section.logo img {
+    width: 50vw;
+    height: 50vw;
+  }
+  body header nav ul {
+    flex-direction: column;
+  }
+  body header nav ul li {
+    padding: 0.5rem 0.25rem;
+  }
 }/*# sourceMappingURL=style.css.map */
